tests/invalid/parse/manual_ex078.pts
import std.io.*;

function main() : void {

}
